feat: SUPER_ADMIN dashboard
